--- a/HTML/blogs.html
+++ b/HTML/blogs.html
@@ -44,7 +44,9 @@
       <div class="blog_filter">
         <div class="blog_filter_mobile">
           <p class="filter_intro">Search & sort</p>
-          <i class="fa-solid fa-chevron-left fa-rotate-270 fa-xl"></i>
+          <span class="filter_arrow">
+            <i class="fa-solid fa-chevron-left fa-rotate-270 fa-xl"></i>
+          </span>
         </div>
 
         <ul class="blog_filter_desktop">
