--- a/index.html
+++ b/index.html
@@ -200,22 +200,23 @@
         next & previous buttons and dots
       -->
       <div class="carousel">
-        <a class="carousel_buttons carousel_prev" href="#">
+        <a class="carousel_buttons carousel_prev">
           <i class="fa-solid fa-chevron-left fa-2xl"></i>
         </a>
+
+        <div class="carousel_bar">
+          <div class="bar" id="scroll_indicator"></div>
+        </div>
   
+        <a class="carousel_buttons carousel_next">
+          <i class="fa-solid fa-chevron-left fa-rotate-180 fa-2xl"></i>
+        </a>
+
         <!--<div class="carousel_dots">
           <span class="dot current_slide" id="dot_1"></span>
           <span class="dot" id="dot_2"></span>
           <span class="dot" id="dot_3"></span>
         </div>-->
-        <div class="carousel_bar">
-          <div class="bar" id="scroll_indicator"></div>
-        </div>
-  
-        <a class="carousel_buttons carousel_next" href="#">
-          <i class="fa-solid fa-chevron-left fa-rotate-180 fa-2xl"></i>
-        </a>
       </div>
 
     </div>
