--- a/HTML/specific.html
+++ b/HTML/specific.html
@@ -38,11 +38,16 @@
         <i class="fa-solid fa-chevron-left"></i>
         Back
       </a>
-      <img class="specific_hero" src="../Images/specific_picture3.png">
+
+      <div class="hero">
+        <!--<img class="specific_hero" src="../Images/specific_picture3.png">-->
+      </div>    
     </div>
-    <h1 class="specific_title">Ice mass reduction</h1>
+
+    <h1 class="specific_title"><!--Ice mass reduction--></h1>
 
     <div class="specific_sections">
+      <!--
       <div class="specific_description">
         <p class="description_text">
           Recent discoveries show a reduction in ice masses from the north. The 
@@ -73,7 +78,7 @@
   
       <div class="specific_image">
         <img class="image" src="../Images/specific_picture2.png">
-      </div>
+      </div>-->
       
     </div>
 
