--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -12,6 +12,18 @@
 
   <link rel="stylesheet" href="../CSS/contact.css">
   <script defer src="../Javascript/contact.js"></script>
+
+  <!-- Hotjar Tracking Code for Drop by Drop -->
+  <script>
+    (function(h,o,t,j,a,r){
+      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+      h._hjSettings={hjid:3494006,hjsv:6};
+      a=o.getElementsByTagName('head')[0];
+      r=o.createElement('script');r.async=1;
+      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+      a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+  </script>
 </head>
 
 <body>
