--- a/index.html
+++ b/index.html
@@ -65,9 +65,11 @@
       alt="Image of water for introduction">
     </div>
 
-    <h2 class="home_latest">Latest posts</h2>
-    <div class="line_1"></div>
-    <div class="line_2"></div>
+    <div class="home_posts">
+      <h2 class="home_latest">Latest posts</h2>
+      <div class="line_1"></div>
+      <div class="line_2"></div>
+    </div>
 
     <!--
       Blog posts
@@ -223,12 +225,6 @@
         <a class="carousel_buttons carousel_next">
           <i class="fa-solid fa-chevron-left fa-rotate-180 fa-2xl"></i>
         </a>
-
-        <!--<div class="carousel_dots">
-          <span class="dot current_slide" id="dot_1"></span>
-          <span class="dot" id="dot_2"></span>
-          <span class="dot" id="dot_3"></span>
-        </div>-->
       </div>
 
     </div>
