--- a/HTML/about.html
+++ b/HTML/about.html
@@ -28,7 +28,7 @@
 
 <body>
   <header class="navbar">
-    <a href="#"><img src="../Images/logo-no-background.png" class="logo"
+    <a href="../index.html"><img src="../Images/logo-no-background.png" class="logo"
       alt="Image for the website logo"></a>
     <input class="burgermenu" type="checkbox" id="burgermenu"/>
     <label class="icon" for="burgermenu"><span class="burgerline"></span></label>
