--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
       <ul class="blog_posts">
 
         <!-- Indiviual blogs -->
+        <!--
         <div class="posts" id="posts_1">
 
           <li class="blog"><a href="HTML/specific.html">
@@ -121,7 +122,6 @@
           </li> 
         </div>
 
-        <!-- Indiviual blogs -->
         <div class="posts" id="posts_2">
 
           <li class="blog"><a href="HTML/specific.html">
@@ -164,7 +164,6 @@
           </li> 
         </div>
 
-        <!-- Indiviual blogs -->
         <div class="posts" id="posts_3">
 
           <li class="blog"><a href="HTML/specific.html">
@@ -206,7 +205,7 @@
             </div></a>
           </li> 
 
-        </div>
+        </div>-->
 
       </ul>
   
