--- a/HTML/blogs.html
+++ b/HTML/blogs.html
@@ -98,118 +98,10 @@
         </ul>
       </div>
 
-      <ul class="blog_posts">
-        <!-- Indiviual blogs -->
-        <!--
-        <li class="blog"><a href="../HTML/specific.html">
-          <img class="blog_image" src="../Images/water.png"
-          alt="Image for blog">
-          <div class="blog_description">
-            <h3 class="blog_desc_text">Drinking water reduction</h3>
-            <div class="blog_line"></div>
-            <div class="blog_date_and_more">
-              <p class="blog_desc_date">25.04.2023</p>
-              <p class="blog_desc_more">Read more ></p>
-            </div>
-          </div></a>
-        </li>
-  
-        <li class="blog"><a href="../HTML/specific.html">
-          <img class="blog_image" src="../Images/water.png"
-          alt="image for blog">
-          <div class="blog_description">
-            <h3 class="blog_desc_text">Drinking water reduction</h3>
-            <div class="blog_line"></div>
-            <div class="blog_date_and_more">
-              <p class="blog_desc_date">25.04.2023</p>
-              <p class="blog_desc_more">Read more ></p>
-            </div>
-          </div></a>
-        </li>
-  
-        <li class="blog"><a href="../HTML/specific.html">
-          <img class="blog_image" src="../Images/water.png"
-          alt="image for blog">
-          <div class="blog_description">
-            <h3 class="blog_desc_text">Drinking water reduction</h3>
-            <div class="blog_line"></div>
-            <div class="blog_date_and_more">
-              <p class="blog_desc_date">25.04.2023</p>
-              <p class="blog_desc_more">Read more ></p>
-            </div>
-          </div></a>
-        </li>
-
-        <li class="blog"><a href="../HTML/specific.html">
-          <img class="blog_image" src="../Images/water.png"
-          alt="image for blog">
-          <div class="blog_description">
-            <h3 class="blog_desc_text">Drinking water reduction</h3>
-            <div class="blog_line"></div>
-            <div class="blog_date_and_more">
-              <p class="blog_desc_date">25.04.2023</p>
-              <p class="blog_desc_more">Read more ></p>
-            </div>
-          </div></a>
-        </li>-->
-
-        <ul class="hidden_posts">
-          <!-- Indiviual blogs -->
-          <!--
-          <li class="blog"><a href="../HTML/specific.html">
-            <img class="blog_image" src="../Images/water.png"
-            alt="Image for blog">
-            <div class="blog_description">
-              <h3 class="blog_desc_text">Drinking water reduction</h3>
-              <div class="blog_line"></div>
-              <div class="blog_date_and_more">
-                <p class="blog_desc_date">25.04.2023</p>
-                <p class="blog_desc_more">Read more ></p>
-              </div>
-            </div></a>
-          </li>
-    
-          <li class="blog"><a href="../HTML/specific.html">
-            <img class="blog_image" src="../Images/water.png"
-            alt="image for blog">
-            <div class="blog_description">
-              <h3 class="blog_desc_text">Drinking water reduction</h3>
-              <div class="blog_line"></div>
-              <div class="blog_date_and_more">
-                <p class="blog_desc_date">25.04.2023</p>
-                <p class="blog_desc_more">Read more ></p>
-              </div>
-            </div></a>
-          </li>
-    
-          <li class="blog"><a href="../HTML/specific.html">
-            <img class="blog_image" src="../Images/water.png"
-            alt="image for blog">
-            <div class="blog_description">
-              <h3 class="blog_desc_text">Drinking water reduction</h3>
-              <div class="blog_line"></div>
-              <div class="blog_date_and_more">
-                <p class="blog_desc_date">25.04.2023</p>
-                <p class="blog_desc_more">Read more ></p>
-              </div>
-            </div></a>
-          </li>
-  
-          <li class="blog"><a href="../HTML/specific.html">
-            <img class="blog_image" src="../Images/water.png"
-            alt="image for blog">
-            <div class="blog_description">
-              <h3 class="blog_desc_text">Drinking water reduction</h3>
-              <div class="blog_line"></div>
-              <div class="blog_date_and_more">
-                <p class="blog_desc_date">25.04.2023</p>
-                <p class="blog_desc_more">Read more ></p>
-              </div>
-            </div></a>
-          </li>-->
-        </ul>
-
-      </ul>
+      <div class="post_align">
+        <ul class="blog_posts"></ul>
+        <ul class="hidden_posts"></ul>
+      </div>
 
     </div>
 
