--- a/HTML/blogs.html
+++ b/HTML/blogs.html
@@ -66,31 +66,31 @@
           <div class="filter_line"></div>
 
           <li class="desktop_item">
-            <span class="checkbox">
+            <span class="checkbox" id="check_newest">
               <i class="fa-solid fa-check"></i>
             </span>
             <span class="item_text">Newest</span>
           </li>
           <li class="desktop_item">
-            <span class="checkbox">
+            <span class="checkbox" id="check_oldest">
               <i class="fa-solid fa-check"></i>
             </span>
             <span class="item_text">Oldest</span>
           </li>
           <li class="desktop_item">
-            <span class="checkbox">
+            <span class="checkbox" id="check_science">
               <i class="fa-solid fa-check"></i>
             </span>
             <span class="item_text">Science</span>
           </li>
           <li class="desktop_item">
-            <span class="checkbox">
+            <span class="checkbox" id="check_discovery">
               <i class="fa-solid fa-check"></i>
             </span>
             <span class="item_text">Discovery</span>
           </li>
           <li class="desktop_item">
-            <span class="checkbox">
+            <span class="checkbox" id="check_media">
               <i class="fa-solid fa-check"></i>
             </span>
             <span class="item_text">Media</span>
