--- a/HTML/about.html
+++ b/HTML/about.html
@@ -100,7 +100,7 @@
       </div>
 
       <div class="subjects">
-        <a class="subject" href="../HTML/subject.html">
+        <a class="subject" href="../HTML/usage.html">
           <img class="subject_image" src="../Images/subject_image_1.png">
           <h3 class="subject_title">Water usage</h3>
         </a>
@@ -110,7 +110,7 @@
           <h3 class="subject_title">Science</h3>
         </a>
 
-        <a class="subject" href="../HTML/subject.html">
+        <a class="subject" href="../HTML/climate.html">
           <img class="subject_image" src="../Images/subject_image_3.png">
           <h3 class="subject_title">Climate change</h3>
         </a>
