--- a/HTML/climate.html
+++ b/HTML/climate.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-  content="details on clicked science subject from about us page">
-  <title>Science subject page</title>
+  content="details on clicked climate change subject from about us page">
+  <title>Climate change subject page</title>
 
   <script src="https://kit.fontawesome.com/26fd6b155e.js" crossorigin="anonymous"></script>
 
@@ -53,69 +53,74 @@
     </div>
 
     <div class="subject_top">
-      <h1 class="subject_title">Water science</h1>
+      <h1 class="subject_title">Climate change</h1>
       <h3 class="subject_intro">
-        The many properties and lifeforms in h20.
+        Global warming and its major effects on water.
       </h3>
     </div>
 
-    <div class="subject_info">
+    <div class="subject_info" id="climate_info">
       <div class="info" id="info_1">
         <div class="info_text">
           <h2 class="text_title">
-            Salt- and freshwater
+            Sea Level Rise
           </h2>
           <p class="text_description">
-            It is known there is saltwater and freshwater. The reason fish simply cannot swim in both waters is the following: Sea water is saltier than the fish, and salt attacts water, and as a result, the fish constantly loses water through its skin, dehydrating it completely. 
+            Climate change contributes to the melting of glaciers and ice caps, leading to a rise 
+            in global sea levels. As sea levels rise, coastal areas become more vulnerable to 
+            flooding, saltwater intrusion into freshwater sources, and increased coastal erosion.
           </p>
           <p class="text_description">
-            In contrast, saltwater fish are saltier than its environment, so water permanently threatens to flood its body.
-          </p>
-          <p class="text_description">
-            That's why freshwater and saltwater fish will never meet. To further analyse this, There is a divide phenomenon in the certain areas known as the halocline, a paper thin layer perfectly seperating the two aquatic worlds apart.
+            The numbers of ice masses like icebergs melting bit by bit only serves to make things 
+            worse. This also affects the fauna living in colder regions like the polar bears or 
+            seals. Without much terrain, some species migh even go extinct.
           </p>
         </div>
-        <img class="info_image" src="../Images/subject_picture1.png">
+        <img class="info_image" src="../Images/sea_levels.png">
       </div>
 
       <div class="info" id="info_2">
         <div class="info_text">
           <h2 class="text_title">
-            H20 subjects
+            Changing Precipitation Patterns
           </h2>
           <p class="text_description">
-            Water, as a fundamental element of life and a vital resource, is studied scientifically through various disciplines and approaches to better understand its properties, behavior, and importance in different contexts, namely three vital ones.
+            Climate change alters precipitation patterns, leading to more intense and 
+            unpredictable rainfall events in some regions, while others experience prolonged 
+            droughts. 
           </p>
           <p class="text_description">
-            Hydrology - the study of water in the environment, including its occurrence, distribution, movement, and properties.
+            These changes can impact water availability, agricultural productivity, and 
+            freshwater ecosystems.
           </p>
           <p class="text_description">
-            Water chemistry - focusing on analyzing the chemical composition of water, including the presence of dissolved substances, minerals, pollutants, and pH levels.
-          </p>
-          <p class="text_description">
-            Limnology - the scientific study of freshwater systems, including lakes, rivers, wetlands, and groundwater.
+            The warmer the climate gets, the more scarce all resources become. As of years ago, 
+            efforts against globale warming cannot afford to dwindle.
           </p>
         </div>
-        <img class="info_image" src="../Images/subject_picture3.png">
+        <img class="info_image" src="../Images/drought.png">
       </div>
 
       <div class="info" id="info_3">
         <div class="info_text">
           <h2 class="text_title">
-            Meteorites and water
+            Melting Mountain Glaciers
           </h2>
           <p class="text_description">
-            Meteorites are known generally as immensly rare natural disasters and is known as what 
-            wiped out the dinosaurs so long ago. What matters in this case however, is how rich in water these space rocks have. Ironicly, these rocks that bombarded the earth so long ago are what's responsible for the water we have at the present.
+            Mountain glaciers act as natural water storage, releasing meltwater during dry 
+            seasons to sustain rivers and ecosystems downstream. 
           </p>
           <p class="text_description">
-            Astrobiologists have studied meteorite fragments, to further unravel the several mysteries of our solar system in depth. 
+            Climate change causes the accelerated melting of these glaciers, disrupting the 
+            natural flow of water and affecting water supplies for communities and ecosystems 
+            that rely on them.
           </p>
           <p class="text_description">
-            In their labs, the cosmic rocks are broken down to their components. Is it possible that not only water, but also the building blocks of life came to us from outer space?
+            Such results are already showing in northern countries like Norway, from the 
+            lack of ice, reduction in snow accumulation and unpredictable weather.
           </p>
         </div>
-        <img class="info_image" src="../Images/subject_picture2.png">
+        <img class="info_image" src="../Images/glaciers.png">
       </div>
     </div>
   </main>
