--- a/HTML/usage.html
+++ b/HTML/usage.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-  content="details on clicked science subject from about us page">
-  <title>Science subject page</title>
+  content="details on clicked water usage subject from about us page">
+  <title>Water usage subject page</title>
 
   <script src="https://kit.fontawesome.com/26fd6b155e.js" crossorigin="anonymous"></script>
 
@@ -53,69 +53,66 @@
     </div>
 
     <div class="subject_top">
-      <h1 class="subject_title">Water science</h1>
+      <h1 class="subject_title">Water usage</h1>
       <h3 class="subject_intro">
-        The many properties and lifeforms in h20.
+        Our current uses and the potential of water.
       </h3>
     </div>
 
-    <div class="subject_info">
+    <div class="subject_info" id="usage_info">
       <div class="info" id="info_1">
         <div class="info_text">
           <h2 class="text_title">
-            Salt- and freshwater
+            Hydropower
           </h2>
           <p class="text_description">
-            It is known there is saltwater and freshwater. The reason fish simply cannot swim in both waters is the following: Sea water is saltier than the fish, and salt attacts water, and as a result, the fish constantly loses water through its skin, dehydrating it completely. 
+            Hydropower is the most common and well-known use of water for energy. It involves 
+            harnessing the energy of flowing or falling water, such as rivers or waterfalls, 
+            to generate electricity. 
           </p>
           <p class="text_description">
-            In contrast, saltwater fish are saltier than its environment, so water permanently threatens to flood its body.
+            Hydropower plants use turbines to convert the kinetic energy of moving water into 
+            mechanical energy, which is then converted into electrical energy.
           </p>
           <p class="text_description">
-            That's why freshwater and saltwater fish will never meet. To further analyse this, There is a divide phenomenon in the certain areas known as the halocline, a paper thin layer perfectly seperating the two aquatic worlds apart.
+            The infrastructure needed to create hydropower can also impact on ecosystems in 
+            adverse ways. For this reason, many consider such small-scale operations a more 
+            environmentally-friendly option.
           </p>
         </div>
-        <img class="info_image" src="../Images/subject_picture1.png">
+        <img class="info_image" src="../Images/hydro_power.png">
       </div>
 
       <div class="info" id="info_2">
         <div class="info_text">
           <h2 class="text_title">
-            H20 subjects
+            Tidal and wave power
           </h2>
           <p class="text_description">
-            Water, as a fundamental element of life and a vital resource, is studied scientifically through various disciplines and approaches to better understand its properties, behavior, and importance in different contexts, namely three vital ones.
+            Tidal power harnesses the energy from the rise and fall of tides in coastal areas. It 
+            involves constructing barrages or turbines that capture the kinetic energy of tidal currents a
+            nd convert it into electricity. Tidal power has the advantage of being predictable and highly reliable.
           </p>
           <p class="text_description">
-            Hydrology - the study of water in the environment, including its occurrence, distribution, movement, and properties.
-          </p>
-          <p class="text_description">
-            Water chemistry - focusing on analyzing the chemical composition of water, including the presence of dissolved substances, minerals, pollutants, and pH levels.
-          </p>
-          <p class="text_description">
-            Limnology - the scientific study of freshwater systems, including lakes, rivers, wetlands, and groundwater.
+            Wave power captures the energy of ocean waves and converts it into electricity. Various technologies, such as floating devices or underwater oscillating water columns, are used to harness the wave energy and drive generators. Wave power has the potential to provide a significant source of renewable energy.
           </p>
         </div>
-        <img class="info_image" src="../Images/subject_picture3.png">
+        <img class="info_image" src="../Images/tidal_power.png">
       </div>
 
       <div class="info" id="info_3">
         <div class="info_text">
           <h2 class="text_title">
-            Meteorites and water
+            water reservoirs
           </h2>
           <p class="text_description">
-            Meteorites are known generally as immensly rare natural disasters and is known as what 
-            wiped out the dinosaurs so long ago. What matters in this case however, is how rich in water these space rocks have. Ironicly, these rocks that bombarded the earth so long ago are what's responsible for the water we have at the present.
+            Reservoirs act as a reliable water source, especially in areas that experience seasonal variations in rainfall or face water scarcity issues. They store water during wet periods and provide a steady supply during dry seasons, ensuring a consistent water source for domestic, industrial, agricultural, and municipal needs.
           </p>
           <p class="text_description">
-            Astrobiologists have studied meteorite fragments, to further unravel the several mysteries of our solar system in depth. 
-          </p>
-          <p class="text_description">
-            In their labs, the cosmic rocks are broken down to their components. Is it possible that not only water, but also the building blocks of life came to us from outer space?
+            Reservoirs also help mitigate the risk of flooding by capturing excess water during heavy rainfall events. By regulating the release of stored water, reservoirs can control downstream flows, reducing the likelihood of downstream flooding and associated damages to infrastructure and communities.
           </p>
         </div>
-        <img class="info_image" src="../Images/subject_picture2.png">
+        <img class="info_image" src="../Images/reservoir.png">
       </div>
     </div>
   </main>
