--- a/HTML/blogs.html
+++ b/HTML/blogs.html
@@ -62,7 +62,8 @@
         </div>
 
         <ul class="blog_filter_desktop">
-          <input class="search_bar" type="text" placeholder="Search..." onkeyup="filterNames()">
+          <input class="search_bar" type="text" placeholder="Search...">
+
           <div class="filter_line"></div>
 
           <li class="desktop_item">
@@ -99,7 +100,6 @@
             </span>
             <span class="item_text">Media</span>
           </li>
-          
         </ul>
       </div>
 
