--- a/HTML/blogs.html
+++ b/HTML/blogs.html
@@ -63,6 +63,7 @@
 
         <ul class="blog_filter_desktop">
           <input class="search_bar" type="text" placeholder="Search...">
+          <div class="searchResults"></div>
 
           <div class="filter_line"></div>
 
@@ -102,6 +103,7 @@
           </li>
         </ul>
       </div>
+      <div class="filtered_posts"></div>
 
       <div class="post_align">
         <ul class="blog_posts"></ul>
