--- a/HTML/specific.html
+++ b/HTML/specific.html
@@ -59,7 +59,10 @@
     <div class="specific_sections"></div>
 
     <!-- Small image modal -->
-    <div class="modal"></div>
+    <div class="modal">
+      <span class="modal_close">&times;</span>
+      <img class="modal_image">
+    </div>
 
   </main>
 
