--- a/index.html
+++ b/index.html
@@ -76,21 +76,7 @@
     -->
     <div class="home_carousel">
 
-      <ul class="blog_posts">
-        <!--
-        <li class="blog"><a href="HTML/specific.html">
-          <img class="blog_image" src="Images/water.png"
-          alt="Image for blog">
-          <div class="blog_description">
-            <h3 class="blog_desc_text">Drinking water reduction</h3>
-            <div class="blog_line"></div>
-            <div class="blog_date_and_more">
-              <p class="blog_desc_date">25.04.2023</p>
-              <p class="blog_desc_more">Read more ></p>
-            </div>
-          </div></a>
-        </li>-->
-      </ul>
+      <ul class="blog_posts"></ul>
   
       <!--
         next & previous buttons and dots
