--- a/HTML/blogs.html
+++ b/HTML/blogs.html
@@ -63,7 +63,7 @@
 
         <ul class="blog_filter_desktop">
           <input class="search_bar" type="text" placeholder="Search...">
-          <div class="searchResults"></div>
+          <div class="search_results"></div>
 
           <div class="filter_line"></div>
 
