--- a/HTML/specific.html
+++ b/HTML/specific.html
@@ -64,6 +64,24 @@
       <img class="modal_image">
     </div>
 
+    <!-- Comment section -->
+    <div class="comment_background"></div>
+    <div class="comment_section">
+      <textarea
+        class="comment_text"
+        rows="5"
+        cols="40"
+        placeholder="Comment..."></textarea>
+      
+      <button class="comment_button"></button>
+    </div>
+
+    <div class="comment_container">
+      <div class="comment_logo">
+        <i class="fa-solid fa-message fa-2xl"></i>
+      </div>
+    </div>
+
   </main>
 
   <footer>
