--- a/HTML/specific.html
+++ b/HTML/specific.html
@@ -67,18 +67,20 @@
     <!-- Comment section -->
     <div class="comment_background"></div>
     <div class="comment_section">
+      <span class="comment_close">&times;</span>
+      <h3 class="comment_title">Place your comments</h3>
       <textarea
         class="comment_text"
         rows="5"
         cols="40"
         placeholder="Comment..."></textarea>
       
-      <button class="comment_button"></button>
+      <button class="comment_button" onclick="submitComment()"></button>
     </div>
 
     <div class="comment_container">
-      <div class="comment_logo">
-        <i class="fa-solid fa-message fa-2xl"></i>
+      <div class="comment_logo" onclick="openComments()">
+        <i class="fa-solid fa-message fa-2xl" onclick="openComments()"></i>
       </div>
     </div>
 
