blog page changes

--- a/HTML/blogs.html
+++ b/HTML/blogs.html
@@ -52,10 +52,19 @@
     </p>
     <div class="blog_top_line"></div>
 
+    <input class="search_bar" type="text" placeholder="Search...">
+    
+    <div class="post_align">
+      <ul class="blog_posts"></ul>
+      <ul class="hidden_posts"></ul>
+    </div>
+
+    <!--
     <div class="blog_sections">
+      
       <div class="blog_filter">
         <div class="blog_filter_mobile">
-          <p class="filter_intro">Search & sort</p>
+          <p class="filter_intro">Sort posts</p>
           <span class="filter_arrow">
             <i class="fa-solid fa-chevron-left fa-rotate-270 fa-xl"></i>
           </span>
@@ -110,7 +119,7 @@
         <ul class="hidden_posts"></ul>
       </div>
 
-    </div>
+    </div>-->
 
     <!--<span class="blog_dots">...</span>-->
 
