--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     Top menu/navigation bar
   -->
   <header class="navbar">
-    <a href="#"><img src="Images/logo-no-background.png" class="logo"
-      alt="Image for the website logo"></a>
+    <img src="Images/logo-no-background.png" class="logo"
+      alt="Image for the website logo">
     <input class="burgermenu" type="checkbox" id="burgermenu"/>
     <label class="icon" for="burgermenu"><span class="burgerline"></span></label>
 
