--- a/HTML/specific.html
+++ b/HTML/specific.html
@@ -71,14 +71,17 @@
       <h3 class="comment_title">Place your comments</h3>
 
       <form class="comment_form">
-        <input type="hidden" class="post_id" value={POST_ID} />
+        <input class="comment_name" type="text" placeholder="Name..." required/>
+        <input class="comment_email" type="email" placeholder="E-mail..." required/>
+
         <textarea
         class="comment_text"
         rows="5"
         cols="40"
-        placeholder="Comment..."></textarea>
+        placeholder="Comment..."
+        required></textarea>
       
-        <button class="comment_button" onclick="postData(event)">Submit</button>
+        <button class="comment_button" type="submit" onclick="postData()">Submit</button>
       </form>
 
       <ul class="comment_posts"></ul>
