--- a/HTML/about.html
+++ b/HTML/about.html
@@ -5,13 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-  content="information on Drop by Drop">
+  content="information about Drop by Drop">
   <title>About us page</title>
 
   <script src="https://kit.fontawesome.com/26fd6b155e.js" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="../CSS/about.css">
-  <script defer src="../Javascript/about.js"></script>
 
   <!-- Hotjar Tracking Code for Drop by Drop -->
   <script>
@@ -27,6 +26,9 @@
 </head>
 
 <body>
+  <!--
+    Top menu
+  -->
   <header class="navbar">
     <a href="../index.html"><img src="../Images/logo-no-background.png" class="logo"
       alt="Image for the website logo"></a>
@@ -59,7 +61,6 @@
         We humans use it more than any other living being on the planet. 
         In turn, we use it far more than necessary.
       </p>
-
     </div>
 
     <div class="about_goal">
@@ -91,6 +92,9 @@
 
     </div>
 
+    <!--
+      Three different subjects, each with their own page
+    -->
     <div class="about_subjects">
       <div class="subjects_text">
         <h2 class="subjects_text_title">Curious?</h2>
@@ -122,6 +126,9 @@
 
   </main>
 
+  <!--
+    Footer
+  -->
   <footer>
     <img class="about_footer_image" src="../Images/logo-white 1.png">
     <h1 class="about_title">Drop by Drop</h1>
