--- a/HTML/blogs.html
+++ b/HTML/blogs.html
@@ -27,6 +27,9 @@
 </head>
 
 <body>
+  <!--
+    Top menu
+  -->
   <header class="navbar">
     <a href="../index.html"><img src="../Images/logo-no-background.png" class="logo"
       alt="Image for the website logo"></a>
@@ -52,8 +55,13 @@
     </p>
     <div class="blog_top_line"></div>
 
+    <!-- Search bar -->
     <input class="search_bar" type="text" placeholder="Search...">
 
+    <!--
+      Blog posts
+      fetched from api
+    -->
     <div class="post_align">
       <ul class="blog_posts"></ul>
       <ul class="hidden_posts"></ul>
@@ -66,6 +74,9 @@
     </div>
   </main>
 
+  <!--
+    Footer
+  -->
   <footer>
     <img class="blog_footer_image" src="../Images/logo-white 1.png">
     <h1 class="blog_title">Drop by Drop</h1>
