--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -27,6 +27,9 @@
 </head>
 
 <body>
+  <!--
+    Top menu
+  -->
   <header class="navbar">
     <a href="../index.html"><img src="../Images/logo-no-background.png" class="logo"
       alt="Image for the website logo"></a>
@@ -45,12 +48,17 @@
   </header>
 
   <main>
+    <!-- Top title and description -->
     <h1 class="contact_title">Contact us</h1>
     <p class="big_text">Send us an email</p>
     <p class="small_text">Get an answer within the week</p>
 
+    <!-- Success message -->
     <div class="message"></div>
 
+    <!--
+      Contact form
+    -->
     <form class="contact_form">
       <h2 class="success"></h2>
       <div class="contact_textboxes">
@@ -106,9 +114,11 @@
         <button class="button" id="button_clear" type="reset">Clear</button>
       </div>
     </form>
-
   </main>
 
+  <!--
+    Footer
+  -->
   <footer>
     <img class="contact_footer_image" src="../Images/logo-white 1.png">
     <h1 class="contact_title">Drop by Drop</h1>
