--- a/HTML/specific.html
+++ b/HTML/specific.html
@@ -27,6 +27,9 @@
 </head>
 
 <body>
+  <!--
+    Top menu
+  -->
   <header class="navbar">
     <a href="../index.html"><img src="../Images/logo-no-background.png" class="logo"
       alt="Image for the website logo"></a>
@@ -81,7 +84,7 @@
         placeholder="Comment..."
         required></textarea>
       
-        <button class="comment_button" type="submit" onclick="postData()">Submit</button>
+        <button class="comment_button" type="submit">Submit</button>
       </form>
 
       <ul class="comment_posts"></ul>
@@ -95,6 +98,9 @@
 
   </main>
 
+  <!--
+    Footer
+  -->
   <footer>
     <img class="specific_footer_image" src="../Images/logo-white 1.png">
     <h1 class="specific_title">Drop by Drop</h1>
