--- a/HTML/usage.html
+++ b/HTML/usage.html
@@ -11,7 +11,6 @@
   <script src="https://kit.fontawesome.com/26fd6b155e.js" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="../CSS/subject.css">
-  <script defer src="../Javascript/subject.js"></script>
 
   <!-- Hotjar Tracking Code for Drop by Drop -->
   <script>
@@ -27,6 +26,9 @@
 </head>
 
 <body>
+  <!--
+    Top menu
+  -->
   <header class="navbar">
     <a href="../index.html"><img src="../Images/logo-no-background.png" class="logo"
       alt="Image for the website logo"></a>
@@ -45,6 +47,7 @@
   </header>
 
   <main>
+    <!-- Back button -->
     <div class="container">
       <a class="back_button" href="../HTML/about.html">
         <i class="fa-solid fa-chevron-left"></i>
@@ -52,6 +55,9 @@
       </a>
     </div>
 
+    <!--
+      Top title and description
+    -->
     <div class="subject_top">
       <h1 class="subject_title">Water usage</h1>
       <h3 class="subject_intro">
@@ -59,6 +65,9 @@
       </h3>
     </div>
 
+    <!--
+      Three staged image and text
+    -->
     <div class="subject_info" id="usage_info">
       <div class="info" id="info_1">
         <div class="info_text">
@@ -117,6 +126,9 @@
     </div>
   </main>
 
+  <!--
+    Footer
+  -->
   <footer>
     <img class="subject_footer_image" src="../Images/logo-white 1.png">
     <h1 class="subject_title">Drop by Drop</h1>
