--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   </main>
 
   <!--
-    At the bottom of every page
+    Footer: at the bottom of every page
   -->
   <footer>
     <img class="home_footer_image" src="Images/logo-white 1.png">
